--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="img/style.css">
 </head>
 <body>
-<H1>BIG WAVE SURFING</H1>
+<H1>BIG WAVE SURFING?1@?$</H1>
 <H2>WHAT IS BIG WAVE SURFING?</H2>
 <DIV CLASS="OR BIG_FONT">Big wave surfing is a discipline within surfing in which experienced</DIV>
  surfers paddle into, or are towed into, waves which are at least
